k8-deployment.yaml
apiVersion: mlops-app/v1
kind: Deployment
metadata:
  name: mlops-deployment # Name of deployment
  labels:
    app: mlops
spec:
  replicas: 2 # Two replicated pods are created
  selector:
    matchLabels:
      app: mlops # k-v tags of pods to manage
    template: # Template of each pod
      metadata: # Metadata of pod
        labels:
          app: mlops #The pods are tagged with this k-v, by which they are found, and managed
      spec:
        containers:
          - name: mlops-app
            image: mlops-webapp:2
            ports:
            - containerPort: 5001

# The deployment yaml is used to deploy the application to clusters. 
# It describes a desired state which is managed and monitored by the deployment controller.
# The controller adds a third part to this deployment yaml called 'status' where etcd details 
# are written out and monitored against 'spec'.
