k8s-service.yaml
apiVersion: v1 # Do not change this
kind: Service
metadata:
  name: mlops-service
  labels:
    app: mlops
spec:
  type: ClusterIP
  selector:
    app: mlops # Pods tagged app:mlops are exposed to the network
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001 # The port of the pods to which traffic is directed
      # name: http

# Service yaml is used to deploy an app running in pods to the network.
# This enables clients to interact with the app.
